Table Hospital {
  hospital_id int [primary key]
  name varchar(100) [not null]
  address varchar(255)
}

Table Department {
  department_id int [primary key]
  name varchar(100) [not null]
}

Table Doctor {
  doctor_id int [primary key]
  name varchar(100) [not null]
}

Table HospitalDepartment {
  hospital_department_id int [primary key]
  hospital_id int [ref: > Hospital.hospital_id]
  department_id int [ref: > Department.department_id]
}

Table HospitalDoctor {
  hospital_doctor_id int [primary key]
  hospital_id int [ref: > Hospital.hospital_id]
  doctor_id int [ref: > Doctor.doctor_id]
}

Table DepartmentDoctor {
  department_doctor_id int [primary key]
  department_id int [ref: > Department.department_id]
  doctor_id int [ref: > Doctor.doctor_id]
}